--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <hr>
         <h2 id="author">Written By: Evan and William</h2>
         <h2 id="inspo">This text is inspired by: Hans Christian Andersen</h2>
-        <img id="firstImage" src="./src/princess.jpeg" alt="princess">
+        <img id="firstImage" src="/src/princess.jpeg" alt="princess">
         <p class="src">
             Source: Chris F, Paper Princess Cartoon Character, <a href="https://www.pexels.com/photo/paper-princess-cartoon-character-6664553">(Pixabay.net)</a> CC0
         </p>
     </body>
     <footer>
 <!--icons taken from https://fonts.google.com/icons-->
-        <a href="second.html"><img id="nextButton" src="./src/arrow_forward.svg" alt="arrow" align="right"></a>
+        <a href="second.html"><img id="nextButton" src="/src/arrow_forward.svg" alt="arrow" align="right"></a>
     </footer>
 </html>
